Removing local config files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ LastSettings.mat
 LastValues.mat
 BaphyHWSetup.mat
 BaphyMainGuiSettings.mat
+BaphyRefTarGuiSettings.mat
 MeskaSettings.mat
 baphy.mat
 *.asv
